--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>Vanillar JS</title>
 </head>
 <body>
     <div class="clock">
@@ -14,10 +14,21 @@
     <form class='form jsform'>
         <input type="text" placeholder="What is your name?? ^^">
     </form>
-
+    
     <h4 class="jsgreeting greeting"></h4>
+    <form class='todo'>
+        <input type="text" placeholder="Write a to do!">
+    </form>
 
+    <ul class='todolist'>
+        
+    </ul>
+
+    <span class="weather"></span>
     <script src="clock.js"></script>
     <script src="gretting.js"></script>
+    <script src='todo.js'></script>
+    <script src="background.js"></script>
+    <script src="weather.js"></script>
 </body>
 </html>
